// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should not trigger the click event when disabled 1`] = `
<button
  className=" css-1rn65c0"
  data-test-id="Button"
  disabled={true}
  onClick={null}
>
  My content
</button>
`;

exports[`<Button /> should render the button 1`] = `
<button
  className=" css-1rn65c0"
  data-test-id="Button"
  disabled={false}
  onClick={null}
>
  My content
</button>
`;

exports[`<Button /> should render the button in disabled state 1`] = `
<button
  className=" css-1rn65c0"
  data-test-id="Button"
  disabled={true}
  onClick={null}
>
  My content
</button>
`;

exports[`<Button /> should trigger the click event 1`] = `
<button
  className=" css-1rn65c0"
  data-test-id="Button"
  disabled={false}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  My content
</button>
`;
